updated css and top navigation

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*   
-Theme Name: Googlesque
+Theme Name: Almost Google
 Theme URI: http://www.aatackoftheweb.net/themes/googlesque
 Description: A simple wordpress theme, inspired by the master of minimalistic designs, Google.
 Author: Ryan Lugg
